hphp/test/zend/bad/zend/ns_077_5.php
<?php

function foo($a = array(0 => \unknown))
{
}

foo();